# mm-problem

./: CMakeLists.txt
include/: reader.hpp  result.hpp
include/mm/problem/: definition.hpp  reader.hpp  result.hpp
include/mm/problem/private/: reader.ipp
src/: is_large.cpp  reader.cpp
src/include/: is_large.hpp  reader.ipp
